--- a/mysite.css
+++ b/mysite.css
@@ -422,7 +422,7 @@ header ul li {
   width: 600px;
 }
 
-.block-8__child-1__h {
+.block-8__h-1 {
   margin-top: 100px;
   margin-bottom: auto;
   font-size: 16px;
@@ -431,7 +431,7 @@ header ul li {
   color: #22356f;
 }
 
-.block-8__child-1__h_2 {
+.block-8__h-2 {
   margin-bottom: 100px;
   font-size: 16px;
   line-height: 23px;
@@ -462,7 +462,7 @@ header ul li {
   color: #ffffff;
 }
 
-.block-9__child-1__h {
+.block-9__h-1 {
   margin-top: 100px;
   margin-bottom: auto;
   font-size: 16px;
@@ -471,7 +471,7 @@ header ul li {
   color: white;
 }
 
-.block-9__child-1__h_2 {
+.block-9__h-2 {
   margin-bottom: 100px;
   font-size: 16px;
   line-height: 23px;
